# omspy

./: pyproject.toml
omspy/: base.py
omspy/brokers/: api_helper.py  neo.yaml  zerodha.py
