[tool.poetry]
name = "omspy"
version = "0.10.0"
description = ""
authors = ["darkseid <uberdeveloper001@gmail.com>"]
readme = "README.md"
packages = [{include = "omspy"}]
repository = "https://github.com/pannet1/omspy"

[tool.poetry.dependencies]
python = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
